# MyOpenGLCAA

./: README.md  github项目id.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sz/myopenglcaa/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/egl/: CrEglHelper.cpp  CrEglHelper.h  CrEglThread.cpp  CrEglThread.h
app/src/main/cpp/log/: CrAndroidLog.h
app/src/main/java/com/sz/myopenglcaa/: MainActivity.java
app/src/main/java/com/sz/opengl/: CrNativeOpengl.java  CrSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sz/myopenglcaa/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
